deploy: a645cde018556f7263a0dab5ac16ed30fe98c858

--- a/documents/index.html
+++ b/documents/index.html
@@ -49,31 +49,7 @@
 
 
     <section class="readme">
-        <article><h1>@jood/v-colrow</h1>
-<p>Vue synchronous row UI <br>
-Component that can be created by swapping columns and rows</p>
-<p>This is a dedicated package for Vue. \</p>
-<ul>
-<li>&gt;=0.3.x : with Vue3</li>
-<li><s>^0.2.x : with @vue/composition-api</s></li>
-</ul>
-<hr>
-<blockquote>
-<p><strong><a href="https://molgga.github.io/jood-v-colrow">Demo</a></strong>
-| <strong><a href="https://github.com/molgga/jood-v-colrow/tree/master/packages/dev/src/components/example">Demo source code</a></strong>
-| <strong><a href="https://molgga.github.io/jood-v-colrow/documents">Documentation</a></strong>
-| <strong><a href="https://github.com/molgga/jood-v-colrow">Github</a></strong>
-| <strong><a href="https://www.npmjs.com/package/@jood/v-colrow">NPM</a></strong>
-<br>
-<br>
-<img src="https://img.shields.io/static/v1.svg?label=&amp;style=flat-square&amp;logoColor=white&amp;color=4fc08d&amp;logo=vue.js&amp;message=Vue" alt="Vue">
-<img src="https://img.shields.io/static/v1.svg?label=&amp;style=flat-square&amp;logoColor=white&amp;color=3178c6&amp;logo=typescript&amp;message=Typescript" alt="Typescript">
-<img src="https://travis-ci.org/molgga/jood-v-colrow.svg?branch=master" alt="TRAVIS">
-<img src="https://img.shields.io/npm/v/@jood/v-colrow.svg" alt="NPM version">
-<img src="https://img.shields.io/npm/l/@jood/v-colrow" alt="NPM license">
-<img src="https://img.shields.io/npm/dt/@jood/v-colrow" alt="NPM download">
-<img src="https://img.shields.io/bundlephobia/min/@jood/v-colrow" alt="NPM bundle size"></p>
-</blockquote></article>
+        <article><h1>@jood/v-colrow</h1></article>
     </section>
 
 
@@ -86,7 +62,7 @@ Component that can be created by swapping columns and rows</p>
 <br class="clear">
 
 <footer>
-    Documentation generated at Fri Feb 18 2022 11:43:15 GMT+0000 (Coordinated Universal Time)
+    Documentation generated at Fri Nov 08 2024 08:42:19 GMT+0000 (Coordinated Universal Time)
 </footer>
 
 <script>prettyPrint();</script>
